tests/errors/invalid_uescape.pyx
# mode: error

u'\uXYZ'

_ERRORS = '''
3:2: Invalid unicode escape '\u'
'''
